# stk_project

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs  models.rs  schema.rs
backend/src/routes/: stickers.rs
stk_backend/: Cargo.toml  diesel.toml
stk_backend/migrations/2025-02-13-224638_create_sticker/: down.sql  up.sql
stk_backend/migrations/2025-02-17-221644_create_category/: up.sql
stk_backend/migrations/2025-02-22-162514_create_sticker_category/: down.sql  up.sql
stk_backend/migrations/2025-02-24-191849_create_tag/: up.sql
stk_backend/migrations/2025-02-25-133443_create_sticker_tag/: down.sql  up.sql
stk_backend/migrations/2025-02-27-143114_create_artist/: up.sql
stk_backend/migrations/2025-02-28-185444_create_artist_sticker/: down.sql  up.sql
stk_backend/migrations/2025-03-06-200727_create_user/: up.sql
stk_backend/migrations/2025-03-10-233845_create_permission/: down.sql  up.sql
stk_backend/migrations/2025-03-10-233850_create_role/: up.sql
stk_backend/migrations/2025-03-11-191901_create_role_permission/: up.sql
stk_backend/migrations/2025-03-11-191920_create_user_role/: up.sql
stk_backend/migrations/2025-03-13-182134_insert_permissions/: down.sql  up.sql
stk_backend/migrations/2025-03-14-010719_insert_role_admin/: down.sql  up.sql
stk_backend/migrations/2025-03-14-011139_insert_admin_permissions/: down.sql  up.sql
stk_backend/src/: errors.rs  lib.rs  main.rs  models.rs  schema.rs
stk_backend/src/models/: categories.rs  common.rs  mod.rs  sticker_tag.rs  (+3 more)
stk_backend/tests/: categories.rs  hello.rs  mod.rs  stickers.rs
(+90 files in other folders)
