[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["sqlite", "r2d2", "uuid", "serde_json"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "serde"] }