[package]
name = "stk_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.8", features = ["sqlite", "r2d2", "uuid", "serde_json"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
thiserror = "2.0.12"
argon2 = "0.5"
jsonwebtoken = "9"  
chrono = "0.4" 

[dev-dependencies]
actix-http="3.9.0"
actix-rt = "2" 
diesel_migrations = "2"
rand = "0.9.0"
serde_json = "1.0.140"